Fix sponsor layout on smaller screens, and revert tbody font

--- a/stylesheets/layout.less
+++ b/stylesheets/layout.less
@@ -12,7 +12,7 @@ body {
 
 .basic-content-page {
     background: @background2016 url('/images/2016/stars_background.svg') 0 0 repeat;
-    margin-top: 30px;
+    margin-top: 70px;
     margin-bottom: 40px;
 }
 
